fixing table alignment specificity

--- a/core/table/table.css
+++ b/core/table/table.css
@@ -8,11 +8,11 @@
 .data table {width:100%; table-layout:fixed;}
 th, td{/*vertical-align:top;*/}
 /* horizontal alignment */
-.txtC, table .txtC td, table .txtC th, .data .txtC th, .data .txtC td{text-align:center;}
-.txtL, table .txtL td, table .txtL th, .data .txtL th, .data .txtL td{text-align:left;}
-.txtR, table .txtR td, table .txtR th, .data .txtR th, .data .txtR td{text-align:right;}
+.txtC, .txtC td, .txtC th, .data .txtC th, .data .txtC td{text-align:center;}
+.txtL, .txtL td, .txtL th, .data .txtL th, .data .txtL td{text-align:left;}
+.txtR, .txtR td, .txtR th, .data .txtR th, .data .txtR td{text-align:right;}
 /* vertical alignment */
-.txtT, table .txtT td, table .txtT th, .data .txtT th, .data .txtT td{vertical-align:top;}
-.txtB, table .txtB td, table .txtB th, .data .txtB th, .data .txtB td{vertical-align:bottom;}
-.txtM, table .txtM td, table .txtM th, .data .txtM th, .data .txtM td{vertical-align:middle;}
+.txtT, .txtT td, .txtT th, .data .txtT th, .data .txtT td{vertical-align:top;}
+.txtB, .txtB td, .txtB th, .data .txtB th, .data .txtB td{vertical-align:bottom;}
+.txtM, .txtM td, .txtM th, .data .txtM th, .data .txtM td{vertical-align:middle;}
 .data th,.data td{padding:3px 20px}
